feat: Update project configuration and add FastAPI application
- Updated pyproject.toml to include shared dependency and authors.
- Added .gitignore to exclude unnecessary files.
- Created .python-version for Python version management.
- Implemented Dockerfile for API service with uvicorn and FastAPI setup.
- Added README.md for project documentation.
- Developed main.py with a simple FastAPI application.
- Updated uv.lock with package dependencies.
- Configured docker-compose.yaml for API service with volume mounts and network settings.

--- a/services/pyproject.toml
+++ b/services/pyproject.toml
@@ -7,8 +7,15 @@ authors = [
     { name = "Fon Godwill Ivan Tana", email = "ivan8tana@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    # local
+    "shared",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+# ref: https://github.com/astral-sh/uv/issues/6371
+[tool.uv.sources]
+shared = { path="../shared", editable=true }
